Added placeholder text and portrait thumbnail.

--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
 	<meta name="viewport" content="width=device-width">
 </head>
 <body>
-	<nav class="navbar navbar-default navbar-static-top">
-	  <div class="container-fluid">
-		  <div class="navbar-header">
-			  <a class="navbar-brand" href="#">AwenS.org</a>
-		  </div>
-		  <ul class="nav navbar-nav navbar-left">
-			  <li><a href='#'>My Work</a></li>
-		  </ul>
-		  <ul class="nav navbar-nav navbar-right">
-			  <li><a href="http://pbx.awens.org">PBX</a></li>
-			  <li><a href="#">Contact</a></li>
-		  </ul>
-	  </div>
-	</nav>
 	<div class="nav">
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="#">AwenS.org</a>
+				</div>
+				<ul class="nav navbar-nav navbar-left">
+					<li><a href='#'>My Work</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="http://pbx.awens.org">PBX</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+		</nav>
+	</div>
 		
 	<div class="jumbotron font-effect-3d-float">
 		<div class="container">
@@ -32,7 +33,24 @@
 			</h1>
 			<p class=text-center>
 				This is the site (along with github etc.) where I host all of my active projects. 
+			</div>
 		</div>
-	</div>
-		
-</body>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8">
+					<h2>About Me</h2>
+					<img src="resources/portrait.jpg" alt="Portrait of Awen" id="portrait" class="img-thumbnail">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+					<a href="#">More...</a>
+				</div>
+				<div class="col-md-4">
+					<h2>Placeholder Text</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+				</div>
+			</div>
+		</div>	
+	</body>
