--- a/index.html
+++ b/index.html
@@ -52,5 +52,30 @@
 					</p>
 				</div>
 			</div>
-		</div>	
-	</body>
+	</div>
+	
+	<div class="container-fluid">
+		<div class="row footer">
+			<div class="col-md-4">
+				<h3>Hello</h3>
+			</div>
+			<div class="col-md-4">
+				<h3>Hello</h3>
+			</div>
+			<div class="col-md-4">
+				<h3>Acknowledgements</h3>
+				<p>Powered by <a href="https://getbootstrap.com/">Bootstrap</a></p>
+				<p>Font: Adobe Source Pro provided by <a href="https://www.google.com/fonts">Google Fonts</a></p>
+				<p>Jumbotron photo by Awen Saunders</p>
+				<p>Portrait photo by <a href="http://www.mitchellpdx.com">Mitchell Lenneville</a></p>
+				<p>All text is provided under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></p>
+				<p>All source code is available under the <a href="https://opensource.org/licenses/MIT">MIT License</a></p>
+				<p>Copyright Awen Saunders</p>
+				
+				
+				<p></p> 
+			</div>
+			
+		</div>		
+	</div>
+</body>
