--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
 				<h2>About Me</h2>
 				<img src="resources/portrait.jpg" alt="Portrait of Awen" id="portrait" class="img-thumbnail">
 				<p>
-					I am an aspiring computer scientist, soon to be studying at Royal Holloway, University of London, with intrests ranging from robotics to kernel code. I also dabble in web design. Outside of CS, I am a junior international fencer and an avid photographer. 
+					I am an aspiring computer scientist, soon to be studying at Royal Holloway, University of London, with interests ranging from robotics to kernel code. I also dabble in web design. Outside of CS, I am a junior international fencer and an avid photographer. 
 				</p>
                 <p>
                     As this website is a work in progress, things may change rapidly, and some links may be broken. This website is hosted by GitHub Pages, and its code can be found at this <a href=https://github.com/awensaunders/awensaunders.github.io/>repository page</a>.
