--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 	<div class="jumbotron font-effect-3d-float" background-image="/resources/Jumbotron.jpg">
 		<div class="container">
 			<h1 class=text-center>
-				Welcome to AwenS.org
+				Welcome to awen.io
 			</h1>
 			<p class=text-center>
 				This is the site (along with github etc.) where I host all of my active projects. 
